add Tetun to syllabi

--- a/syllabus/English_Language.html
+++ b/syllabus/English_Language.html
@@ -23,7 +23,8 @@
 
     <h2>Course Description</h2>
     <p>This comprehensive English Grammar Guide provides an in-depth exploration of English grammar rules, structures, and usage. The course is designed to enhance students' understanding and application of English grammar in both spoken and written contexts.</p>
-
+    <p>Matadalan ida-ne'ebé komprensivu kona-ba lian Ingles fornese esplorasaun kle'an kona-ba regra, estrutura no utilizasaun lian Ingles. Kursu ne'e dezeña atu hasa'e estudante sira-nia kompriensaun no aplikasaun kona-ba grama Ingles iha kontestu ko'alia no hakerek.</p>
+    
     <h2>Table of Contents</h2>
     <ul>
         <li><a href="#tenses">Tenses</a></li>
