--- a/scripts/index.html
+++ b/scripts/index.html
@@ -22,6 +22,7 @@
         <li><a href="https://tl-tefl.s3.amazonaws.com/application_installers/KeePass-2.57-Setup.exe">application_installers/KeePass-2.57-Setup.exe</a></li>
         <li>csv/</li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/csv/worldcities.csv">csv/worldcities.csv</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/english_to_tetun_dictionary.html">english_to_tetun_dictionary.html</a></li>
         <li>images/</li>
         <li>images/Holistic_Healing_Arts_and_Practices_Module1_Lesson2/</li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/images/Holistic_Healing_Arts_and_Practices_Module1_Lesson2/fascia.JPG">images/Holistic_Healing_Arts_and_Practices_Module1_Lesson2/fascia.JPG</a></li>
@@ -30,27 +31,44 @@
         <li><a href="https://tl-tefl.s3.amazonaws.com/index.html">index.html</a></li>
         <li>pdf/</li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/15971-WB_Timor-Leste%20Country%20Profile-WEB.pdf">pdf/15971-WB_Timor-Leste Country Profile-WEB.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/2010_Sacred_Cloth_and_Development_in_Tim.pdf">pdf/2010_Sacred_Cloth_and_Development_in_Tim.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/564676085-Study-Notes-Grade-8-Lesson-3-Arts.docx">pdf/564676085-Study-Notes-Grade-8-Lesson-3-Arts.docx</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/AquaBamboo-data-driven-suggested-system-for-water-manage_2024_Advances-in-Ba.pdf">pdf/AquaBamboo-data-driven-suggested-system-for-water-manage_2024_Advances-in-Ba.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Bamboo-fibre--A-sustainable-solution-for-textile-m_2024_Advances-in-Bamboo-S.pdf">pdf/Bamboo-fibre--A-sustainable-solution-for-textile-m_2024_Advances-in-Bamboo-S.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Bamboo-in-the-pulp--paper-and-allied-industrie_2024_Advances-in-Bamboo-Scien.pdf">pdf/Bamboo-in-the-pulp--paper-and-allied-industrie_2024_Advances-in-Bamboo-Scien.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Bamboo-structures--Innovative-methods-and-applications-fo_2024_Advances-in-B.pdf">pdf/Bamboo-structures--Innovative-methods-and-applications-fo_2024_Advances-in-B.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Basics_of_Permaculture_Design.pdf">pdf/Basics_of_Permaculture_Design.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Comparison-and-assessment-of-nutritional-composition-in-_2024_Advances-in-Ba.pdf">pdf/Comparison-and-assessment-of-nutritional-composition-in-_2024_Advances-in-Ba.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Constitutional-Law-in-Timor-Leste.pdf">pdf/Constitutional-Law-in-Timor-Leste.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Earthbag_Building-The_Tools_Tricks_and_Techniques.pdf">pdf/Earthbag_Building-The_Tools_Tricks_and_Techniques.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Final_Report_NTT_Ikat.pdf">pdf/Final_Report_NTT_Ikat.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Free_Your_Fascia.pdf">pdf/Free_Your_Fascia.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Investigation-and-application-of-different-extraction-tec_2024_Advances-in-B.pdf">pdf/Investigation-and-application-of-different-extraction-tec_2024_Advances-in-B.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Medical%20Herbalism%20-%20The%20Science%20and%20Practice%20of%20Herbal%20Medicine%20%282003%29.pdf">pdf/Medical Herbalism - The Science and Practice of Herbal Medicine (2003).pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Peace%20Corps%20Tetun.pdf">pdf/Peace Corps Tetun.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Permaculture_Guidebook_English.pdf">pdf/Permaculture_Guidebook_English.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/SOAP%20Explanation.pptx">pdf/SOAP Explanation.pptx</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Safeguarding_Traditional_Weaving_Tais_in.pdf">pdf/Safeguarding_Traditional_Weaving_Tais_in.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Tais-Industry-Research-and-Recommendations.pdf">pdf/Tais-Industry-Research-and-Recommendations.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/The%20Sword%20and%20the%20Flute%20Kali%20Krishna%20and%20Dark%20Visions%20of%20The%20Sublime%20David%20Kinsley.pdf">pdf/The Sword and the Flute Kali Krishna and Dark Visions of The Sublime David Kinsley.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Timor%20Leste%20NAP.pdf">pdf/Timor Leste NAP.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Tradition-meets-technology--An-overview-of-fermente_2024_Advances-in-Bamboo-.pdf">pdf/Tradition-meets-technology--An-overview-of-fermente_2024_Advances-in-Bamboo-.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Tradition_Medicine_Use_in_TL.pdf">pdf/Tradition_Medicine_Use_in_TL.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Valorization-of-bamboo-charcoal-as-a-low-cost-adsorbent-_2024_Advances-in-Ba.pdf">pdf/Valorization-of-bamboo-charcoal-as-a-low-cost-adsorbent-_2024_Advances-in-Ba.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/Writing_and_Translating_Timorese_Oral_Tradition.pdf">pdf/Writing_and_Translating_Timorese_Oral_Tradition.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/aquaculture.pdf">pdf/aquaculture.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/aquaponics.pdf">pdf/aquaponics.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/bill_of_rights.pdf">pdf/bill_of_rights.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/english-for-everyone-english-grammar-guide.pdf">pdf/english-for-everyone-english-grammar-guide.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/grokking-algorithms-illustrated-programmers-curious.pdf">pdf/grokking-algorithms-illustrated-programmers-curious.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/guidos-et-al-2022-integrative-medicine-in-timor-leste-a-report-of-prevalence-and-practice-of-timorese-medicine-usage.pdf">pdf/guidos-et-al-2022-integrative-medicine-in-timor-leste-a-report-of-prevalence-and-practice-of-timorese-medicine-usage.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/hyperadobe.pdf">pdf/hyperadobe.pdf</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/keeping-bees-with-a-smile-principles-and-practice-of-natural-beekeeping.pdf">pdf/keeping-bees-with-a-smile-principles-and-practice-of-natural-beekeeping.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/permaculture-design-pdfdrive.com-.pdf">pdf/permaculture-design-pdfdrive.com-.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/permaculture_field_manual.pdf">pdf/permaculture_field_manual.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/permaculture_principles-weisman.pdf">pdf/permaculture_principles-weisman.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/pdf/traditional_medicine_Dialogos_2022_Guidos_et_al.pdf">pdf/traditional_medicine_Dialogos_2022_Guidos_et_al.pdf</a></li>
+        <li><a href="https://tl-tefl.s3.amazonaws.com/tetun_to_english_dictionary.html">tetun_to_english_dictionary.html</a></li>
         <li>videos/</li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/videos/Essential_Oil_Distillation.mp4">videos/Essential_Oil_Distillation.mp4</a></li>
         <li><a href="https://tl-tefl.s3.amazonaws.com/videos/Morning_Routine_Phrasal_Verbs.mp4">videos/Morning_Routine_Phrasal_Verbs.mp4</a></li>
