--- a/quizzes/quiz.html
+++ b/quizzes/quiz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://tarotcardsstyles.s3.us-west-2.amazonaws.com/favicon.ico">
     <title>Multiple Choice Quizzes</title>
     <style>
         body {
