add calculate grade feature

--- a/scripts/gradebook/gradebook.html
+++ b/scripts/gradebook/gradebook.html
@@ -21,6 +21,7 @@
         <div id="addOptions">
             <button id="addStudentBtn"></button>
             <button id="addAssignmentBtn"></button>
+            <button id="calculateAveragesBtn"></button>
         </div>
 
         <table id="gradebookTable"></table>
