course browser and go-tl update

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -123,6 +123,7 @@
         <ul>
             <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
             <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
+            <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
             <li><a href="https://content.go-tl.com/translate.html">Tradusaun husi Tetum ba Inglés no Kontráriu (Dictionary Translation from Tetum to English and Vice Versa)</a></li>
             <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
             <li><a href="https://go-tl.com/budget.html">Kalkuladór Orsamentu Tetum (Tetum Budget Calculator)</a></li>
