godd night timor

--- a/scripts/course_browser/course_browser.html
+++ b/scripts/course_browser/course_browser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Browser</title>
+    <title>Kursu Navegador</title>
     <style>
         body, html {
             font-family: Arial, sans-serif;
@@ -60,11 +60,11 @@
 <body>
     <div class="main-container">
         <div id="sidebar">
-            <h1>Course Navigation</h1>
+            <h1>Kursu Navegador</h1>
             <ul>
                 <li><a href="#" onclick="loadContent('syllabus')">Syllabus</a></li>
-                <li><a href="#" onclick="loadContent('lesson_plans')">Lesson Plans</a></li>
-                <li><a href="#" onclick="loadContent('activities')">Activities</a></li>
+                <li><a href="#" onclick="loadContent('lesson_plans')">Planu Aula</a></li>
+                <li><a href="#" onclick="loadContent('activities')">Atividade sira</a></li>
             </ul>
             <h2 id="selectedCategory"></h2>
             <ul id="fileList"></ul>
