--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -119,31 +119,31 @@
     <p>Welcome to this comprehensive resource hub designed to support Peace Corps volunteers and the vibrant communities of Timor-Leste. This collection of materials aims to foster sustainable development, cultural exchange, and mutual learning between volunteers and Timorese people.</p>
 
     <div class="section">
-        <h2>Key Resources</h2>
+        <h2>Rekursu Prinsipal</h2>
         <ul>
+            <li><a href="https://go-tl.com/mnews.html">Notísia husi Inan Ain (News from Mother Earth)</a></li>
+            <li><a href="https://go-tl.com/bedtime.html">Noite Di'ak Timor - Istoria Tuku Laran ba Labarik Ki'ik sira (Good Night Timor - bedtime stories)</a></li>
             <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
             <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
             <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
-            <li><a href="https://content.go-tl.com/translate.html">Tradusaun husi Tetum ba Inglés no Kontráriu (Dictionary Translation from Tetum to English and Vice Versa)</a></li>
             <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
-            <li><a href="https://go-tl.com/budget.html">Kalkuladór Orsamentu Tetum (Tetum Budget Calculator)</a></li>
+            <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
+            <li><a href="https://content.go-tl.com/quizzes/quiz.html">Teste Eskolla Multiplu (Multiple Choice Quizzes)</a></li>
+            <li><a href="https://content.go-tl.com/quizzes_fitb/quiz.html">Teste Preenxe iha Laran (Fill in the Blank Quizzes)</a></li>
             <li><a href="https://go-tl.com/gradebook.html">Livru Nota Online ba Mestri sira (Online Gradebook for Teachers)</a></li>
-            <li><a href="https://go-tl.com/mnews.html">Notísia husi Inan Ain (News from Mother Earth)</a></li>
             <li><a href="https://go-tl.com/links.html">Ligasaun Timor-Leste nian (Timor Leste Links)</a></li>
             <li><a href="https://go-tl.com/draw.html">Pájina Web Desenho nian (Drawing Web Page)</a></li>
             <li><a href="https://go-tl.com/coffee.html">Kalkuladór Lukru ba Kafé Hemu (Coffee Drink Profit Calculator)</a></li>
-            <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
             <li><a href="https://go-tl.com/where.html">Buka Ita-nia Fatin Atuál (Get Your Current Location)</a></li>
             <li><a href="https://go-tl.com/ask.html">Buka Google Antropik Tetum (Tetum Google Anthropic Search)</a></li>
-            <li><a href="https://content.go-tl.com/quizzes/quiz.html">Teste Eskolla Multiplu (Multiple Choice Quizzes)</a></li>
-            <li><a href="https://content.go-tl.com/quizzes_fitb/quiz.html">Teste Preenxe iha Laran (Fill in the Blank Quizzes)</a></li>
             <li><a href="https://go-tl.com/drums.html">Máquina Tuku Drum ho Looper (Drum Machine with Looper)</a></li>
+            <li><a href="https://go-tl.com/budget.html">Kalkuladór Orsamentu Tetum (Tetum Budget Calculator)</a></li>            
             <li><a href="https://github.com/ddtraveller/TEFLTools/blob/main/README.md">Fonte Github (Github Source)</a></li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>Key Courses</h2>
+        <h2>Kursu Prinsipal</h2>
         <div class="grid">
             <div class="card">
                 <h3>Regenerative Living: A Permaculture Approach</h3>
@@ -169,7 +169,7 @@
     </div>
 
     <div class="section">
-        <h2>Additional Resources</h2>
+        <h2>Rekursu sira ne'ebé aumenta</h2>
         <ul>
             <li><a href="http://www.tetundit.tl/publications.html">Dili Institute of Technology</a></li>
             <li><a href="https://discord.gg/DaBJG2Gn">Discord: Tetun Learners!</a></li>
