course roster system

--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -115,8 +115,8 @@
         <h1>Haforsa Timor-Leste: Empowering Timor-Leste</h1>
     </div>
 
-    <p>Baun-baun ba iha ne'e sentru rekursu kompleitu ne'ebé dezinha atu suporta voluntariu Peace Corps no komunidade timor-oan ne'ebé moris diak. Koleksaun material ne'e nia objetivu mak atu kuda dezenvolvimentu sustentavel, interkambiu kultural, no aprendizajen mútua entre voluntariu sira no ema Timor nian.</p>
-    <p>Welcome to this comprehensive resource hub designed to support Peace Corps volunteers and the vibrant communities of Timor-Leste. This collection of materials aims to foster sustainable development, cultural exchange, and mutual learning between volunteers and Timorese people.</p>
+    <p>Baun-baun ba iha ne'e sentru rekursu kompleitu ne'ebé dezinha atu suporta mestres, estudantes no komunidade timor-oan ne'ebé moris diak. Koleksaun material ne'e nia objetivu mak atu kuda dezenvolvimentu sustentavel, interkambiu kultural, no aprendizajen mútua entre voluntariu sira no ema Timor nian.</p>
+    <p>Welcome to this comprehensive resource hub designed to support teachers, students and the vibrant communities of Timor-Leste. This collection of materials aims to foster sustainable development, cultural exchange, and mutual learning between volunteers and Timorese people.</p>
 
     <div class="section">
         <h2>Rekursu Prinsipal</h2>
@@ -125,7 +125,8 @@
             <li><a href="https://go-tl.com/bedtime.html">Noite Di'ak Timor - Istoria Tuku Laran ba Labarik Ki'ik sira (Good Night Timor - bedtime stories)</a></li>
             <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
             <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
-            <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
+            <li><a href="https://go-tl.com/course_browser.html">Sistema Jestaun Lista Eskola (School Teacher/Student Roster System)</a></li>
+            <li><a href="https://go-tl.com/roster/roster.html">Kursu Navegador (Course Browser)</a></li>
             <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
             <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
             <li><a href="https://content.go-tl.com/quizzes/quiz.html">Teste Eskolla Multiplu (Multiple Choice Quizzes)</a></li>
