--- a/scripts/go-tl/index.html
+++ b/scripts/go-tl/index.html
@@ -125,8 +125,9 @@
             <li><a href="https://go-tl.com/bedtime.html">Noite Di'ak Timor - Istoria Tuku Laran ba Labarik Ki'ik sira (Good Night Timor - bedtime stories)</a></li>
             <li><a href="https://tefl.go-tl.com/">Suporta Mídia ba Kursu sira (Support Media for Courses)</a></li>
             <li><a href="https://go-tl.com/readings_browser.html">Navegador Leitura nian (Readings Browser)</a></li>
-            <li><a href="https://go-tl.com/course_browser.html">Sistema Jestaun Lista Eskola (School Teacher/Student Roster System)</a></li>
-            <li><a href="https://go-tl.com/roster/roster.html">Kursu Navegador (Course Browser)</a></li>
+            <li><a href="https://go-tl.com/roster/roster.html">Sistema Jestaun Lista Eskola (School Teacher/Student Roster System)</a></li>
+            <li><a href="https://go-tl.com/math/geometry.html">Kalkúlu Jeometria / Geometry Calculator</a></li>
+            <li><a href="https://go-tl.com/course_browser.html">Kursu Navegador (Course Browser)</a></li>
             <li><a href="https://translate.go-tl.com/2way">Tradutór Rua-Dalan (LLM Two-way Translator)</a></li>
             <li><a href="https://content.go-tl.com/exam.html">Exame Inglés Online/Offline (Online/Offline English Exam)</a></li>
             <li><a href="https://content.go-tl.com/quizzes/quiz.html">Teste Eskolla Multiplu (Multiple Choice Quizzes)</a></li>
